# lte-gateway

./: CMakeLists.txt  README.rst  apricity_gateway_nrf9160ns.overlay  child_secure_partition_manager.conf  prj_apricity_gateway_nrf9160ns.conf  prj_nrf9160dk_nrf9160ns.conf  west.yml
boards/arm/apricity_gateway_nrf9160/: Kconfig  Kconfig.defconfig  apricity_gateway_nrf9160_common.dts  nrf52840_reset.c
src/: ble.c  ble.h  ble_codec.c  ble_codec.h  ble_conn_mgr.c  cli.c  gateway.c  main.c
src/dfu/: peripheral_dfu.c
src/ui/: led_pwm.c
